Add README and other pending changes