@@ -150,6 +150,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <release>17</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -158,14 +159,8 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/java.lang=Badro</arg>
                         <arg>--add-reads</arg>
                         <arg>Badro=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/java.util=Badro</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/java.io=Badro</arg>
                         <arg>--add-opens</arg>
                         <arg>Badro/tn.badro.services=ALL-UNNAMED</arg>
                     </compilerArgs>
